test/spec/if.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/if.wast
(;; STDOUT ;;;
out/test/spec/if.wast:499: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:503: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:507: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:511: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:516: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:520: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:524: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:528: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:533: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  000001e: error: OnEndExpr callback failed
out/test/spec/if.wast:539: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  000001e: error: OnEndExpr callback failed
out/test/spec/if.wast:545: assert_invalid passed:
  error: type mismatch in if false branch, expected [] but got [i32]
  000001f: error: OnEndExpr callback failed
out/test/spec/if.wast:551: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  000001e: error: OnElseExpr callback failed
out/test/spec/if.wast:558: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001d: error: OnElseExpr callback failed
out/test/spec/if.wast:564: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got []
  000001f: error: OnEndExpr callback failed
out/test/spec/if.wast:570: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001d: error: OnEndExpr callback failed
out/test/spec/if.wast:576: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got []
  000001f: error: OnEndExpr callback failed
out/test/spec/if.wast:583: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001e: error: OnElseExpr callback failed
out/test/spec/if.wast:589: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got []
  0000021: error: OnEndExpr callback failed
out/test/spec/if.wast:595: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001e: error: OnElseExpr callback failed
out/test/spec/if.wast:602: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/test/spec/if.wast:608: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got [i64]
  0000022: error: OnEndExpr callback failed
out/test/spec/if.wast:614: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/test/spec/if.wast:620: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/test/spec/if.wast:627: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000025: error: EndFunctionBody callback failed
out/test/spec/if.wast:637: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000025: error: EndFunctionBody callback failed
out/test/spec/if.wast:647: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000027: error: EndFunctionBody callback failed
out/test/spec/if.wast:658: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/if.wast:664: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000021: error: OnBrExpr callback failed
out/test/spec/if.wast:670: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/if.wast:679: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000021: error: OnBrExpr callback failed
out/test/spec/if.wast:688: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/if.wast:697: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000022: error: OnBrExpr callback failed
out/test/spec/if.wast:707: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/if.wast:716: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000023: error: OnBrExpr callback failed
out/test/spec/if.wast:726: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000019: error: OnIfExpr callback failed
out/test/spec/if.wast:734: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001d: error: OnIfExpr callback failed
out/test/spec/if.wast:743: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001d: error: OnIfExpr callback failed
out/test/spec/if.wast:752: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001f: error: OnIfExpr callback failed
out/test/spec/if.wast:761: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000022: error: OnIfExpr callback failed
out/test/spec/if.wast:775: assert_malformed passed:
  out/test/spec/if/if.40.wat:1:14: error: unexpected label "$l"
  (func if end $l)
               ^^
out/test/spec/if.wast:779: assert_malformed passed:
  out/test/spec/if/if.41.wat:1:17: error: mismatching label "$a" != "$l"
  (func if $a end $l)
                  ^^
out/test/spec/if.wast:783: assert_malformed passed:
  out/test/spec/if/if.42.wat:1:15: error: unexpected label "$l"
  (func if else $l end)
                ^^
out/test/spec/if.wast:787: assert_malformed passed:
  out/test/spec/if/if.43.wat:1:18: error: mismatching label "$a" != "$l"
  (func if $a else $l end)
                   ^^
out/test/spec/if.wast:791: assert_malformed passed:
  out/test/spec/if/if.44.wat:1:19: error: unexpected label "$l"
  (func if else end $l)
                    ^^
out/test/spec/if.wast:795: assert_malformed passed:
  out/test/spec/if/if.45.wat:1:15: error: unexpected label "$l"
  (func if else $l end $l)
                ^^
  out/test/spec/if/if.45.wat:1:22: error: unexpected label "$l"
  (func if else $l end $l)
                       ^^
out/test/spec/if.wast:799: assert_malformed passed:
  out/test/spec/if/if.46.wat:1:15: error: unexpected label "$l1"
  (func if else $l1 end $l2)
                ^^^
  out/test/spec/if/if.46.wat:1:23: error: unexpected label "$l2"
  (func if else $l1 end $l2)
                        ^^^
out/test/spec/if.wast:803: assert_malformed passed:
  out/test/spec/if/if.47.wat:1:22: error: mismatching label "$a" != "$l"
  (func if $a else end $l)
                       ^^
out/test/spec/if.wast:807: assert_malformed passed:
  out/test/spec/if/if.48.wat:1:25: error: mismatching label "$a" != "$l"
  (func if $a else $a end $l)
                          ^^
out/test/spec/if.wast:811: assert_malformed passed:
  out/test/spec/if/if.49.wat:1:18: error: mismatching label "$a" != "$l"
  (func if $a else $l end $l)
                   ^^
  out/test/spec/if/if.49.wat:1:25: error: mismatching label "$a" != "$l"
  (func if $a else $l end $l)
                          ^^
137/137 tests passed.
;;; STDOUT ;;)
